--- a/Poker/WebContent/index.html
+++ b/Poker/WebContent/index.html
@@ -1,116 +1,17 @@
-<!doctype=html>
-<html lang="en" ng-app="app">
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-<title>Poker API Explorer</title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<script src="https://code.angularjs.org/1.3.0-rc.2/angular.js"></script>
-<script src="resources/js/controllers.js"></script>
-</head>
-<body>
-    <!--  Menu 
-        TODO: create home page
-        TODO: create content view page
-        TODO: create application view
-    -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Brand</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span
-                            class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul></li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span
-                            class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <!--  Breadcrumb  
-        TODO: breadcrumb after Server > App > Instance
-    -->
-    <div ng-controller="BreadCrumbController">
-        <ol class="breadcrumb">
-            <li><a href="#">{{breadcrumb.root}}</a></li>
-            <li><a href="#">{{breadcrumb.module}}</a></li>
-            <li><a href="#">{{braedcrumb.host}}</a></li>
-            <li class="active">{{breadcrumb.app}}</li>
-        </ol>
-    </div>
-    <!-- TODO: snapshot Error, Warning, Info Debug of current editor -->
-    <div ng-controller="ErrorBarController">
-        <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped" style="width: {{error.info}}%">
-                <span class="sr-only">35% Complete (success)</span>
-            </div>
-            <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: {{error.warning}}%">
-                <span class="sr-only">20% Complete (warning)</span>
-            </div>
-            <div class="progress-bar progress-bar-danger progress-bar-striped" style="width: {{error.error}}%">
-                <span class="sr-only">10% Complete (danger)</span>
-            </div>
-        </div>
-    </div>
-    <!-- Content -->
-    <div ng-controller="LogViewerController">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">{{log.name}}</h3>
-            </div>
-            <div class="panel-body">{{log.content}}</div>
-            <div class="panel-footer">{{log.size}}</div>
-        </div>
-    </div>
-    <!--  Log Viewer -->
-    <ul class="pagination">
-        <li><a href="#">&laquo;</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">&raquo;</a></li>
-    </ul>
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="resources/js/angular.min.js"></script>
+<script src="resources/js/app.js"></script>
+<script src="resources/js/navigation_controller.js"></script>
+<script src="resources/js/main_controller.js"></script>
+<body ng-app="app">
+
+	<div ng-include="'htm/navigation.htm'"></div>
+	<div ng-include="'htm/main.htm'"></div>
+
 </body>
 </html>
